// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea render correctly 1`] = `
<textarea
  className="class"
  controlled={false}
  onBlur={[Function]}
  onConfirm={[Function]}
  onFocus={[Function]}
  onInput={[Function]}
  toutiao-selection-end={999}
  toutiao-selection-start={999}
  wechat-fixed={false}
  wechat-selection-end={999}
  wechat-selection-start={999}
/>
`;

exports[`Textarea should have maxlength when PLATFORM is wechat or toutiao 1`] = `
<textarea
  className="class"
  controlled={false}
  maxLength={140}
  onBlur={[Function]}
  onConfirm={[Function]}
  onFocus={[Function]}
  onInput={[Function]}
  toutiao-selection-end={999}
  toutiao-selection-start={999}
  wechat-fixed={false}
  wechat-selection-end={999}
  wechat-selection-start={999}
/>
`;
